Se creo un formulario en el componen.html para hacer un doble binding, recibo con la variable direccionIP la ip que quiero mostrar, esta variable la defini en el archivo component.ts y le agregue el parametro que se solicitara en el service, tambien defino ahi direccionIP:string para que pueda utilizarlo en el body

--- a/src/app/components/direccion-ip/direccion-ip.component.html
+++ b/src/app/components/direccion-ip/direccion-ip.component.html
@@ -1,2 +1,8 @@
-<p>direccion-ip works!</p>
-<button type="button" id="traducir" (click)="ObtenerIps()">Obtener IPS</button>
+<H3 class="mt-5">GESTION DE DIRECCION IP</H3>
+<form>
+    <div class="mb-3">
+        <label for="DireccionIp" class="form-label">Ingrese Direccion Ip:</label>
+        <input type="text" class="form-control" id="DireccionIp" name="DireccionIp" value="" [(ngModel)]="direccionIP">
+        <button type="button" id="DireccionIp" name="DireccionIp" (click)="IngresarIp()">IP ingresada</button>
+    </div>     
+</form>
