se agregaron los atributos de data.latitude, y data.longitude, para que me muestre la direccion de la IP en google masp

--- a/src/app/components/direccion-ip/direccion-ip.component.html
+++ b/src/app/components/direccion-ip/direccion-ip.component.html
@@ -19,6 +19,7 @@
     <p><strong>Hora Local:</strong> {{ datosIp.timezone.time }}</p>
     <p><strong>Zona Horaria:</strong> {{ datosIp.timezone.offset }}</p>
 
+    <a class="nav-link" href="https://maps.google.com/?q={{datosIp.latitude}},{{datosIp.longitude}}">Ir al lugar Link</a>
    }
 
 </div>
