Cree una clase para los atributos de la nueva API,  cree el metodo mostrarDireccion el cual se invoca en el metodo de la otra API xq utiliza atrib de esa y html

--- a/src/app/components/direccion-ip/direccion-ip.component.html
+++ b/src/app/components/direccion-ip/direccion-ip.component.html
@@ -20,6 +20,19 @@
     <p><strong>Zona Horaria:</strong> {{ datosIp.timezone.offset }}</p>
 
     <a class="nav-link" href="https://maps.google.com/?q={{datosIp.latitude}},{{datosIp.longitude}}">Ir al lugar Link</a>
-   }
+    
+    }
 
+    <h5>INFORMACION DE LA DIRECCION</h5>
+    <div>
+       @if (addressDetails){
+            <p><strong>Dirección:</strong> {{ addressDetails.address }}</p>
+            <p><strong>Número:</strong> {{ addressDetails.addressNumber }}</p>
+            <p><strong>Ciudad:</strong> {{ addressDetails.city }}</p>
+            <p><strong>Región:</strong> {{ addressDetails.region }}</p>
+            <p><strong>Subregión:</strong> {{ addressDetails.subregion }}</p>
+            <p><strong>País:</strong> {{ addressDetails.country }}</p>
+            <hr>
+       }        
+    </div>
 </div>
